# MediaShare

./: README.md  Revision.txt
backend/: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/core/: security.py
backend/app/migrations/: env.py  script.py.mako
backend/app/migrations/versions/: 170a1851acc4_add_profiles_table.py  677cf3f3b346_add_notifications_table.py  6a4f7fb2326f_add_sharing_tables.py  b244517baa2a_add_media_files_table.py  c3745ccab7af_add_google_id_to_users.py  d34faed89165_create_users_and_refresh_tokens.py  dd62be4ab5d2_add_media_files_table.py
backend/app/modules/ai/: router.py
backend/app/modules/auth/: models.py  router.py  schemas.py  service.py
backend/app/modules/media/: models.py  router.py  schemas.py  service.py  storage.py  validators.py
backend/app/modules/notifications/: models.py  router.py  service.py
backend/app/modules/search/: router.py  service.py
backend/app/modules/shares/: models.py  router.py  schemas.py  service.py
backend/app/modules/users/: models.py  router.py  schemas.py  service.py
backend/app/workers/: celery_app.py
backend/app/workers/tasks/: media_processing.py
backend/localstack-init/: init.sh
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: ai.ts  auth.ts  client.ts  media.ts  shares.ts  users.ts
frontend/src/components/: VoiceShare.tsx
frontend/src/hooks/: useNotifications.ts
(+19 files in other folders)
